# xyplug-sample-uvx

./: README.md  pyproject.toml
src/xyplug_sample_uvx/: cli.py
